# ipu-3dgs

./: .gitmodules  CMakeLists.txt  README.md  index.html  jdl_multislice_experiment.md
anim/: README.md  gaussian_projection_anim.py  gaussian_projection_manim.py  render_manim.sh  render_split_gifs.py
codelets/splat/: codelets.cpp  keysExample.txt  simd.S  useful_commands.txt
codelets/tests/: codelets.cpp
include/math/: CMakeLists.txt  README.md
include/remote_ui/: InterfaceServer.hpp
include/splat/: gather_discovery.hpp  ipu_geometry.hpp  ipu_rasteriser.hpp  viewport.hpp
src/main/: mem.txt  splat.cpp
src/splat/: CMakeLists.txt  camera.cpp  cpu_rasteriser.cpp  geometry.cpp  ipu_rasteriser.cpp
tests/: test_comparison.cpp  test_pipeline.cpp
tools/: analyse_teleport.py  bench_all_scenes.sh  bench_all_scenes_gpu.sh  bench_compare_gather.sh  benchmark_gpu.sh  benchmark_ipu.sh  benchmark_path_chairs.json  benchmark_path_pringles.json  benchmark_path_salad.json  benchmark_path_sloth.json  benchmark_pose.json  benchmark_pose_chairs.json  benchmark_pose_pc10.json  benchmark_pose_pc12.json  benchmark_pose_pringles.json  benchmark_pose_pringles_b.json  benchmark_pose_salad.json  benchmark_pose_sloth.json  benchmark_traj_chairs.traj  benchmark_traj_chairs_slow2880.traj  benchmark_traj_pringles.traj  benchmark_traj_pringles_slow2880.traj  benchmark_traj_salad.traj  benchmark_traj_salad_slow2880.traj  benchmark_traj_sloth.traj  benchmark_traj_sloth_slow2880.traj  benchmark_traj_teleport_chairs.traj  benchmark_traj_teleport_pringles.traj  benchmark_traj_teleport_salad.traj  benchmark_traj_teleport_sloth.traj  benchmark_with_power.sh  churn_experiment.cpp  fetch_dylanebert_3dgs.py  gather_discovery_test.cpp  gpu_watch.py  make_fpsw_table.py  multislice_bench.cpp  orbit_from_pose.py  parse_gpu_breakdown.py  plot_breakdown_ipu_vs_gpu.py  (+15 more)
